fix ci (#378)