@@ -1,12 +1,16 @@
+plugins {
+    id 'org.springframework.boot'
+}
+
 apply from: project(":").file('gradle/java.gradle')
 
 dependencies {
     implementation project(':common:rest-java-model')
+    implementation group: 'io.swagger.core.v3', name: 'swagger-annotations'
     implementation group: 'ai.h2o', name: 'mojo2-runtime-api'
     implementation group: 'ai.h2o', name: 'mojo2-runtime-impl'
     implementation group: 'com.google.guava', name: 'guava'
     implementation group: 'org.slf4j', name: 'slf4j-api'
-    implementation group: 'org.yaml', name: 'snakeyaml'
     // FIXME(MM): this should not be required, since the dependency should be provided
     // by mojo2-runtime-impl. The problem is that mojo2 does not expose that dependency
     // as compile time dependency for consumers.
@@ -15,15 +19,22 @@ dependencies {
     // end of fixme
 
     testImplementation group: 'com.google.truth.extensions', name: 'truth-java8-extension'
-    testImplementation group: 'org.mockito', name: 'mockito-inline'
-    testImplementation group: 'org.mockito', name : 'mockito-core'
-    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter'
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api'
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params'
-    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine'
-    testImplementation group: 'org.junit-pioneer', name: 'junit-pioneer'
+    testImplementation group: 'org.mockito', name: 'mockito-inline', version: mockitoInlineVersion
+    testImplementation group: 'org.mockito', name : 'mockito-core', version: mockitoVersion
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: mockitoVersion
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: jupiterVersion
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: jupiterVersion
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: jupiterVersion
+    testImplementation group: 'org.junit-pioneer', name: 'junit-pioneer', version: jupiterPioneerVersion
+}
+
+bootJar {
+    enabled=false
 }
 
 test {
     useJUnitPlatform()
+
+    jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED'
+    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
 }
